# codeshift-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.ui  EVAL_RESULTS.md  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  langgraph.json  manifest.json  nginx.conf  pyproject.toml  start-ngrok.sh
.github/workflows/: ci.yml
docs/: architecture.md  known_limitations.md  operations.md  production_hardening_roadmap.md  public_examples.md
docs/adr/: 0001-langgraph-stategraph.md  0002-deterministic-evidence-validation.md  0003-trusted-documentation-only.md  0004-degraded-observability.md  0005-read-only-v1.md  0006-multi-language-migration-packs.md
docs/security/: SECURITY.md  SECURITY_SCAN_RESULTS.md  sbom.cdx.json  security_scan.json
evals/: common.py  compare.py  dataset.py  langsmith_backend.py  run.py  run_evals.py  scorers.py  sync_dataset.py
evals/datasets/: detection_cases.py  registry.py
evals/suites/: detection.py  local.py
migration_packs/django_v3_to_v4/: applicability.yaml  detection_rules.yaml  pack.yaml  risk_rules.yaml  trusted_sources.yaml  validation_rules.yaml
migration_packs/pydantic_v1_to_v2/: applicability.yaml  detection_rules.yaml  pack.yaml  risk_rules.yaml  trusted_sources.yaml  validation_rules.yaml
migrations/: env.py
migrations/versions/: 0001_users.py  0002_jobs.py  0003_analyses.py  0004_findings.py
prometheus/: prometheus.yml
scripts/: check_postgres_checkpoint_resume.py  generate_sbom.py  security_scan.py
specs/: 01_PROJECT_OVERVIEW.md  02_SCOPE_AND_REQUIREMENTS.md  03_AGENTIC_AI_FRAMEWORK.md  04_LANGGRAPH_ORCHESTRATION.md  05_SYSTEM_ARCHITECTURE.md  06_STATE_AND_DATA_CONTRACTS.md  07_PYDANTIC_MIGRATION_PACK.md  08_TOOLS_AND_TRUSTED_SOURCES.md  09_LANGSMITH_OBSERVABILITY.md  10_EVALUATION_HARNESS.md  11_TESTING_STRATEGY.md  12_DOCKER_AND_DEVOPS.md  13_SECURITY_AND_GUARDRAILS.md  14_REPOSITORY_STRUCTURE.md  15_IMPLEMENTATION_PLAN.md  16_DEFINITION_OF_DONE.md  17_VERSION_2_ROADMAP.md  18_CLAUDE_CODE_EXECUTION_GUIDE.md  19_V2_REQUIREMENTS.md  20_V2_IMPLEMENTATION_PLAN.md
src/upgradepilot/: __init__.py  config.py  errors.py  worker.py
templates/: ADR_TEMPLATE.md  EVAL_RESULTS_TEMPLATE.md
tests/fixtures/pep621/: Dockerfile  pyproject.toml
tests/fixtures/pep621/src/myapp/: models.py
tests/fixtures/poetry/: pyproject.toml  tox.ini
tests/fixtures/poetry/myservice/: models.py
tests/integration/: test_api_analyses.py  test_github_client.py  test_graph_run.py  test_ui_contract.py
tests/security/: test_archive_security.py
tests/unit/: test_acquisition_node.py  test_ast_scanner.py  test_checkpointer.py  test_compatibility_and_planning_agents.py  test_config.py  test_documentation_research_agent.py  test_errors.py  test_evals_harness.py  test_evidence_validation_and_repair.py  test_findings_store.py  test_graph_routes.py  test_health.py  test_llm_client.py  test_logging.py  test_manifest_parser.py  test_pack_discovery.py  test_pack_loader.py  (+7 more)
(+143 files in other folders)
