[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "upgradepilot"
version = "0.1.0"
description = "Agentic Pydantic v1-to-v2 migration intelligence platform"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "streamlit>=1.40.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "langgraph>=0.2.60",
    "langchain-core>=0.3.0",
    "langsmith>=0.2.0",
    "httpx>=0.28.0",
    "redis[hiredis]>=5.2.0",
    "psycopg[binary]>=3.2.0",
    "prometheus-client>=0.21.0",
    "python-json-logger>=3.2.0",
    "anyio>=4.7.0",
    "langgraph-checkpoint-postgres>=3.1.0",
    "alembic>=1.18.5",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.34.0",
    "coverage[toml]>=7.6.0",
    "types-pyyaml>=6.0.12.20260518",
]

[tool.hatch.build.targets.wheel]
packages = ["src/upgradepilot"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]
exclude = ["tests/fixtures", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "ANN"]
ignore = [
    "S101",    # use of assert (ok in tests)
]
per-file-ignores = { "tests/**" = ["S", "ANN"], "evals/**" = ["S", "ANN"] }

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
packages = ["upgradepilot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
norecursedirs = ["tests/fixtures", ".venv", "dist", "build", ".git"]
markers = [
    "network: marks tests that require external network access",
    "langsmith: marks tests that require LangSmith credentials",
    "slow: marks slow-running tests",
]
addopts = "-v --tb=short"
python_classes = ["Test*"]
filterwarnings = ["ignore::pytest.PytestCollectionWarning"]

[tool.coverage.run]
source = ["src/upgradepilot"]
omit = ["tests/*", "evals/*"]
