[tool.poetry]
name = "myservice"
version = "1.2.0"
description = "A service using Poetry"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10"
requests = "^2.28"
SQLAlchemy = ">=1.4,<2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^23.0"

[tool.poetry.group.test.dependencies]
pytest-cov = ">=4.0"
httpx = ">=0.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
